--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
   "name": "@heypano/pupds",
   "license": "ISC",
-  "version": "0.0.2",
+  "version": "0.0.25",
   "description": "Pano Papadatos' Component Library",
   "scripts": {
-    "rollup": "rollup -c"
+    "rollup": "rm -rf dist && rollup -c"
   },
   "author": "Pano Papadatos",
   "devDependencies": {
+    "@babel/core": "^7.18.5",
+    "@babel/preset-react": "^7.17.12",
+    "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^8.3.2",
     "@types/react": "^18.0.11",
     "react": "^18.1.0",
     "rollup": "^2.75.5",
-    "rollup-plugin-dts": "^4.2.2",
     "tslib": "^2.4.0",
     "typescript": "^4.7.3"
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "files": [
-    "dist"
-  ],
-  "types": "dist/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": ["dist/**"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/heypano/pupds.git"
