--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@heypano/pupds",
   "license": "ISC",
-  "version": "0.0.31",
+  "version": "0.0.34",
   "description": "Pano Papadatos' Component Library",
   "scripts": {
     "rollup": "rollup -c",
@@ -22,6 +22,7 @@
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.12",
+    "@types/styled-components": "^5.1.25",
     "babel-loader": "^8.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -29,11 +30,13 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.32.1",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.3"
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.5"
   },
   "files": [
     "dist"
