--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.12",
     "@types/styled-components": "^5.1.25",
+    "@types/throttle-debounce": "^5.0.0",
+    "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,7 +38,9 @@
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "throttle-debounce": "^5.0.0",
+    "uuid": "^8.3.2"
   },
   "files": [
     "dist"
