--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "rollup": "rollup -c",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "deploy-storybook": "aws s3 sync --delete storybook-static/ s3://design.pup.codes"
   },
   "author": "Pano Papadatos",
   "devDependencies": {
