--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "Pano Papadatos' Component Library",
   "scripts": {
     "rollup": "rollup -c",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "serve-static": "npx http-server storybook-static",
-    "build-storybook": "build-storybook",
     "deploy-storybook": "aws s3 sync --delete storybook-static/ s3://design.pup.codes",
     "prelint": "tsc -noEmit",
     "lint": "eslint src --ext .tsx,.ts",
@@ -16,19 +16,24 @@
   "author": "Pano Papadatos",
   "devDependencies": {
     "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.25.4",
+    "@chromatic-com/storybook": "^1.9.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@semantic-release/changelog": "^6.0.1",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-interactions": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-webpack4": "^6.5.9",
-    "@storybook/manager-webpack4": "^6.5.9",
-    "@storybook/react": "^6.5.9",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-actions": "^8.3.0",
+    "@storybook/addon-essentials": "^8.3.0",
+    "@storybook/addon-interactions": "^8.3.0",
+    "@storybook/addon-links": "^8.3.0",
+    "@storybook/addon-onboarding": "^8.3.0",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
+    "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
+    "@storybook/blocks": "^8.3.0",
+    "@storybook/react": "^8.3.0",
+    "@storybook/react-webpack5": "^8.3.0",
+    "@storybook/test": "^8.3.0",
     "@types/react": "^18.0.12",
     "@types/styled-components": "^5.1.25",
     "@types/throttle-debounce": "^5.0.0",
@@ -40,6 +45,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.8.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,6 +54,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "semantic-release": "^19.0.5",
+    "storybook": "^8.3.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.3"
   },
