--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,11 +15,19 @@ orbs:
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  build-project:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  s3-sync:
     docker:
-      - image: cimg/node:22.8.0
+      - image: cimg/base:current
+    steps:
+      - aws-s3/sync:
+          arguments: |
+            --delete
+          from: storybook-static
+          to: 's3://design.pup.codes/'
+          overwrite: true
+  build-project:
+    docker:
+      - image: cimg/base:current
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
@@ -51,11 +59,7 @@ jobs:
       - run:
           name: Semantic release 🚀
           command: npx semantic-release
-      - aws-s3/sync:
-          arguments: |
-            --delete
-          from: storybook-static
-          to: 's3://design.pup.codes/'
+
 
 
 # Invoke jobs via workflows
@@ -64,3 +68,6 @@ workflows:
   build-and-deploy:
     jobs:
       - build-project
+      - s3-sync:
+          requires:
+            - build-project
