--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           to: 's3://design.pup.codes/'
   build-project:
     docker:
-      - image: cimg/base:current
+      - image: cimg/node:22.8.0
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
