--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,24 +1,25 @@
 version: 2.1
 
 
-# Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
 # See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
-  # The S3 orb will setup the aws-cli and quickly copy or sync anything to s3.
-  # Orbs reduce the amount of configuration required for common tasks.
   # See the orb documentation here: https://circleci.com/developer/orbs/orb/circleci/aws-s3
   # NOTE: Environment variables containing the necessary secrets can be setup in the CircleCI UI
   # See here https://circleci.com/docs/2.0/env-vars/#setting-an-environment-variable-in-a-project
   aws-cli: circleci/aws-cli@4.0
   aws-s3: circleci/aws-s3@4.0.0
 
-# Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
   s3-sync:
     docker:
       - image: cimg/base:current
     steps:
+      - run:
+          name: Install AWS CLI
+          command: |
+            apt-get update && \
+            apt-get install -y awscli
       - aws-s3/sync:
           arguments: |
             --delete
