--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@storybook/react-webpack5": "^8.3.0",
     "@storybook/test": "^8.3.0",
     "@types/react": "^18.0.12",
+    "@types/react-color": "^3.0.12",
     "@types/styled-components": "^5.1.25",
     "@types/throttle-debounce": "^5.0.0",
     "@types/uuid": "^8.3.4",
@@ -79,6 +80,7 @@
   },
   "homepage": "https://github.com/heypano/pupds#readme",
   "dependencies": {
-    "html2canvas": "^1.4.1"
+    "html2canvas": "^1.4.1",
+    "react-color": "^2.19.3"
   }
 }
